--- a/assets/minecraft/lang/ja_jp.lang
+++ b/assets/minecraft/lang/ja_jp.lang
@@ -414,13 +414,13 @@ botania.page.binder1=今世紀最大の発明
 botania.tagline.binder=地の利
 
 botania.entry.pedestal=リビングロックの台座
-botania.page.pedestal0=右クリックでリビングロッ<BR>クの台座にアイテムを配置<BR>できる。<BR>ハンマーでリビングロックの<BR>台座に配置されたアイテム<BR>を練造できる。
-botania.page.pedestal1=What is evil? Everything that comes from weakness is evil.
-botania.page.pedestal2=Hidden is a kind of outstanding talent.
+botania.page.pedestal0=右クリックでリビングロッ<br>クの台座にアイテムを配置<br>できる。<br>ハンマーでリビングロックの<BR>台座に配置されたアイテム<BR>を練造できる。
+botania.page.pedestal1=悪とは何か。悪とは弱さから生ずるすべてのものだ
+botania.page.pedestal2=才能を隠すのにも卓越した才能がいる。
 botania.page.pedestal3=地獄とは他人のことだ。
-botania.page.pedestal4=Nothing is as dangerous as an ignorant friend, better a wise enemy.
+botania.page.pedestal4=無知な友人ほど危険なものはなく、賢明な敵ほど良いものはない。
 botania.page.pedestal5=この門をくぐる者は一切の希望を捨てよ。
-botania.page.pedestal6=Man is condemned to be free.
+botania.page.pedestal6=人間は自由であるように宣告されている。
 botania.tagline.pedestal=Display items
 
 botania.entry.froststar=霜の指輪
@@ -455,7 +455,7 @@ botania.tagline.failnaught=骨董品。
 botania.entry.natureorb=ネイチャーオーブ
 botania.page.natureorb0=The Nature Orb can store &1Natural Breath&0, a magical power which protects the carrier. To collect &1Natural Breath&0 it needs to be placed on a Livingrock Pedestal and a ritualistic multiblock structure around Livingrock Pedestal is needed. Additionally the Nature Orb grants boosts to certain nearby flowers.
 botania.page.natureorb5=Blessing of Mana will provide you with mana, Blessing of Regeneration will speed up your regeneration and Blessing of Senro will drive away bad effects on you.
-botania.page.natureorb1=Not a Blood Orb.
+botania.page.natureorb1=ブラッドオーブではない。
 botania.page.natureorb2=Rank I Ritual.
 botania.page.natureorb3=Rank II Ritual.
 botania.page.natureorb4=Build a multiblock structure and place it on the Livingrock Pedestal to collect &1Natural Breath&0.
@@ -553,11 +553,11 @@ botania.entry.shadowwarrior=影武者
 botania.page.shadowwarrior0=With the magic of Gilded Mashed Potato, we can use Nightmare Fuel and a Elementium Ingot to make Shadowium. It's a very special kind of material.
 botania.page.shadowwarrior1=And Then There Were None.
 botania.page.shadowwarrior2=With the power of Shadowium, Armour crafted with it will give wearer speed, strength, and night vision when the night comes. A sword made of it also seems to call upon Shadow pixies
-botania.page.shadowwarrior3=Shadow Warrior Helmet
+botania.page.shadowwarrior3=影武者の兜
 botania.page.shadowwarrior4=Shadow Warrior Chestplate
 botania.page.shadowwarrior5=Shadow Warrior Leggings
 botania.page.shadowwarrior6=Shadow Warrior Boots
-botania.page.shadowwarrior7=Shadow Katana
+botania.page.shadowwarrior7=影武者の刀
 botania.tagline.shadowwarrior=Not A Vampire
 
 botania.entry.elfjar=リビングロックの樽
@@ -571,7 +571,7 @@ botania.page.supercrown1=お前はキノピコじゃない。
 botania.tagline.supercrown=ネコマリオ
 
 botania.entry.puredaisypendant=ピュアデイジーのペンダント
-botania.page.puredaisypendant0=By holding a Pure Daisy Pendant and right-clicking a block, you can instanly transform blocks like a pure daisy, at the cost of a little mana. After 64 uses, it will cool down for 2.5min, and it only cools down when it is equipped.
+botania.page.puredaisypendant0=ピュアデイジーのペンダントを持ってブロックを右クリックすると、マナを消費してブロックをピュアデイジーでの変異と同じ効果をもたらせる。 64回使用すると、2.5分の間クールダウンする。クールダウンは装備している間だけ進行する。
 botania.page.puredaisypendant1=My beauty is in position.
 botania.tagline.puredaisypendant=Now You See Me, Now You Don't
 
@@ -591,10 +591,10 @@ botania.page.godcore1=
 botania.tagline.godcore=
 
 botania.entry.parkour=パルクールの指輪
-botania.page.parkour0=Ring of Wall-Run will enable you to climb any wall you want, and Ring of Wall-Jump enables you to "jump" on the wall at most 5 times until you reach the ground.
+botania.page.parkour0=壁走りの指輪を装備すると、どんな壁でも梯子のように登ることができ、壁蹴りの指輪は地面につくまで最大5回壁で「ジャンプ」することが出来る。
 botania.page.parkour1=
 botania.page.parkour2=
-botania.page.parkour3=While Ring of Parkour combines both.
+botania.page.parkour3=パルクールの指輪はその両方を兼ね備えていますが。
 botania.page.parkour4=
 botania.tagline.parkour=
 
@@ -743,7 +743,7 @@ botania.tagline.=
 
 extrabotany.desc=マナ至上主義の世界へようこそ
 
-extrabotany.config.waila.pool=Waila Support for Mana Pool
+extrabotany.config.waila.pool=Wailaはマナプールをサポートします
 extrabotany.config.waila.managenerator=Waila Support for Flux Manafield
 extrabotany.config.waila.manabuffer=Waila Support for Mana Buffer
 extrabotany.config.waila.manaliquefaction=Waila Support for Mana Liquefaction
@@ -760,7 +760,7 @@ extrabotany.config.enable.ca=Enable Construct's Armory Compat
 
 advancement.extrabotany:nightmarefuelEating=DEEP♂DARK♂FANTASY
 advancement.extrabotany:nightmarefuelEating.desc=悪夢の燃料を食べる
-advancement.extrabotany:newknowledgeUnlock=Unlock New Knowledge
+advancement.extrabotany:newknowledgeUnlock=新たな知識の解放
 advancement.extrabotany:newknowledgeUnlock.desc=ボタニア植物辞典を持って魂の燃料が配置されたリビングロックの台座を右クリックする
 advancement.extrabotany:pedestalCraft=CONNECT
 advancement.extrabotany:pedestalCraft.desc=リビングロックの台座をクラフトする
@@ -789,9 +789,9 @@ advancement.extrabotany:kinggardenCraft.desc=王律庭をクラフトする
 advancement.extrabotany:annoyingdogSummon=April Fool
 advancement.extrabotany:annoyingdogSummon.desc=イヌに宝を吸収させる
 advancement.extrabotany:failnaughtCraft=from Y to Y
-advancement.extrabotany:failnaughtCraft.desc=フェイルノートをクラフトする
+advancement.extrabotany:failnaughtCraft.desc=フェイルノートを手に入れる
 advancement.extrabotany:cameraCraft=ルカルカ★ナイトフィーバー
-advancement.extrabotany:cameraCraft.desc=射命丸のカメラをクラフトする
+advancement.extrabotany:cameraCraft.desc=射命丸のカメラを手に入れる
 advancement.extrabotany:gaiaDefeat=KiLLER LADY
 advancement.extrabotany:gaiaDefeat.desc=ガイアの守護者 Ⅲを倒す
 advancement.extrabotany:natureorbCraft=Single floor
@@ -799,9 +799,9 @@ advancement.extrabotany:natureorbCraft.desc=ネイチャーオーブをクラフ
 advancement.extrabotany:landmineActive=WORLD'S END UMBRELLA
 advancement.extrabotany:landmineActive.desc=赤色の地雷からダメージを受ける
 advancement.extrabotany:achilleshieldCraft=Mr.Wonder
-advancement.extrabotany:achilleshieldCraft.desc=アキレウスの盾をクラフトする
+advancement.extrabotany:achilleshieldCraft.desc=アキレウスの盾を手に入れる
 advancement.extrabotany:mastermanaringCraft=COLOR
-advancement.extrabotany:mastermanaringCraft.desc=極めしマナバンドをクラフトする
+advancement.extrabotany:mastermanaringCraft.desc=極めしマナバンドを手に入れる
 advancement.extrabotany:mastermanaringFill=Fairytale,
 advancement.extrabotany:mastermanaringFill.desc=ゲームに勝つために極めたマナバンドを満たす
 advancement.extrabotany:musicAll=千本桜
@@ -813,11 +813,11 @@ advancement.extrabotany:armorsetCombat.desc=全てのプレアデスの戦闘メ
 advancement.extrabotany:armorsetSW=Crazy ∞ nighT
 advancement.extrabotany:armorsetSW.desc=夜の間に全ての影武者の鎧を装備する
 advancement.extrabotany:airshipMaxheight=Slowly sky
-advancement.extrabotany:airshipMaxheight.desc=Drive a Terrasteel Airship at least 200 metres high
+advancement.extrabotany:airshipMaxheight.desc=テラスチールの飛行船を200m以上運転する
 advancement.extrabotany:infinitewineCraft=shake it!
-advancement.extrabotany:infinitewineCraft.desc=インフィニティワインをクラフトする
+advancement.extrabotany:infinitewineCraft.desc=インフィニティワインを手に入れる
 advancement.extrabotany:excaliberCraft=ReAct
-advancement.extrabotany:excaliberCraft.desc=Obtain Excaliber
+advancement.extrabotany:excaliberCraft.desc=エクスキャリバーを手に入れる
 advancement.extrabotany:allStats=erase or zero
 advancement.extrabotany:allStats.desc=全てのextra botanyの実績を完了する
 advancement.extrabotany:luckyDraw=Starduster
@@ -836,7 +836,7 @@ advancement.extrabotany:manadriverGet=園芸の才能
 advancement.extrabotany:manadriverGet.desc=Complete 6 extrabotany's advancement and you will be awarded Ring of Mana Drive.
 advancement.extrabotany:magicfingerGet=こちら、幸福安心委員会です。
 advancement.extrabotany:magicfingerGet.desc=extra botanyの実績を12個完了し、魔法の指を入手する
-advancement.extrabotany:jingweifeatherGet=エルフと人間のハーフ
+advancement.extrabotany:jingweifeatherGet=ハーフエルフ
 advancement.extrabotany:jingweifeatherGet.desc=extra botanyの実績を18個完了し、兆銘の羽を入手する
 advancement.extrabotany:onepunchMan=ワンパンチ
 advancement.extrabotany:onepunchMan.desc=Cast an aura fire that deals over 40 damages.
@@ -863,7 +863,7 @@ extrabotany.potion.healreverse=Reversed Healing
 
 modifier.shadow.name=Shadow
 modifier.shadow.desc=§oThe Long Dark！§r\nUses Mana to repair, can also  summon dark pixies when you attack mobs.
-material.extrabotany:ingotshadowium.name=Shadowium
+material.extrabotany:ingotshadowium.name=シャドニウム
 modifier.mind.name=Mind
 modifier.mind.desc=More Effecient
 modifier.body.name=Body
