--- a/assets/minecraft/lang/ja_jp.lang
+++ b/assets/minecraft/lang/ja_jp.lang
@@ -766,7 +766,7 @@ advancement.extrabotany:pedestalCraft=CONNECT
 advancement.extrabotany:pedestalCraft.desc=リビングロックの台座をクラフトする
 advancement.extrabotany:ultimatehammerCraft=PON PON PON
 advancement.extrabotany:ultimatehammerCraft.desc=アルティメットハンマーをクラフトする
-advancement.extrabotany:ultimatehammerUpgrade=Front Lovers
+advancement.extrabotany:ultimatehammerUpgrade=裏表ラバーズ
 advancement.extrabotany:ultimatehammerUpgrade.desc=金のマッシュポテトを使ってアルティメットハンマーを強化する
 advancement.extrabotany:fragmentForge=Gears of Love
 advancement.extrabotany:fragmentForge.desc=リビングロックの台座でアイテムを一つクラフトする
@@ -794,7 +794,7 @@ advancement.extrabotany:cameraCraft=ルカルカ★ナイトフィーバー
 advancement.extrabotany:cameraCraft.desc=射命丸のカメラを手に入れる
 advancement.extrabotany:gaiaDefeat=KiLLER LADY
 advancement.extrabotany:gaiaDefeat.desc=ガイアの守護者 Ⅲを倒す
-advancement.extrabotany:natureorbCraft=Single floor
+advancement.extrabotany:natureorbCraft=雨夢楼
 advancement.extrabotany:natureorbCraft.desc=ネイチャーオーブをクラフトする
 advancement.extrabotany:landmineActive=WORLD'S END UMBRELLA
 advancement.extrabotany:landmineActive.desc=赤色の地雷からダメージを受ける
